<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_browser">Browser</string>
    <string name="menu_moh">Moh Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="worker">Worker</string>
    <string name="camera">Camera</string>
    <string name="height" />
    <string name="boiling_temp">Boiling temp</string>
    <string name="boiling_temperatue">boiling_temperatue</string>
    <string name="boiling_temperature">boiling_temperature</string>
    <string name="audio_record">audio_record</string>
    <string name="profile">profile</string>
    <string name="file_converter">file_converter</string>
    <string name="weather">weather</string>

</resources>