<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/images"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/moh_data"
            android:icon="@drawable/moh_icon"
            android:title="@string/menu_moh" />
        <item
            android:id="@+id/worker"
            android:icon="@drawable/loading_img"
            android:title="@string/worker" />
        <item
            android:id="@+id/camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/camera" />
        <item
            android:id="@+id/sensor"
            android:icon="@drawable/temperature"
            android:title="@string/boiling_temperature" />
        <item
            android:id="@+id/audio"
            android:icon="@drawable/audio_rec"
            android:title="@string/audio_record" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/user_access"
            android:title="@string/profile" />
        <item
            android:id="@+id/file_handle"
            android:icon="@drawable/folder"
            android:title="@string/file_converter" />
        <item
            android:id="@+id/weather"
            android:icon="@drawable/temperature"
            android:title="@string/weather" />
    </group>
</menu>